# cc_ChatServer

./: CMakeLists.txt  README.md  autobuild.sh
include/: public.hpp
include/redis/: redis.hpp
include/server/: ChatServer.hpp  ChatService.hpp  Group.hpp  GroupUser.hpp  User.hpp
include/server/db/: mysql.hpp
include/server/model/: FriendModel.hpp  GroupModel.hpp  OfflineMessageModel.hpp  UserModel.hpp
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  ChatServer.cpp  ChatService.cpp  main.cpp
src/server/db/: mysql.cpp
src/server/model/: FriendModel.cpp  GroupModel.cpp  OfflineMessageModel.cpp  UserModel.cpp
src/server/redis/: redis.cpp
